Category picker: Fix broken layout
By setting a fixed height the elements inside the category picker
where overflowing their container elements

--- a/indico/htdocs/sass/partials/_jquery-indico-categorypicker.scss
+++ b/indico/htdocs/sass/partials/_jquery-indico-categorypicker.scss
@@ -17,7 +17,7 @@
 
 %category-picker-sizing {
     width: 800px;
-    height: 600px;
+    min-height: 600px;
 }
 
 .category-picker-wrapper {
